--- a/mod04_css/aula16_margem_padding/style.css
+++ b/mod04_css/aula16_margem_padding/style.css
@@ -1,12 +1,17 @@
 div {
     width: 400px;
-    height: 150px;
+    height: 90px;
     background-color: pink;
     border: 1px solid red;
 }
 
 #bloco1 {
-    margin: 10px;
+    margin: 38px auto;
+}
+
+#bloco2 {
+    margin-left: 50px;
+    padding: 30px;
 }
 
 .fundo {
